# lym1d

./: .gitignore  README.md  pyproject.toml  run_Palanque_2020.py  run_Palanque_2020_nautilus.py  setup.py
notebooks/: fit_eboss_taylor.ipynb  fit_eboss_taylor.py  iminuit_interface.py  leave_one_out_PK.ipynb  leave_one_out_PK_lP.ipynb  lya_fitpars_np20_v1.yaml  test_taylor.py
public_data/: pk_1d_DR12_13bins.out
public_data/expansionNorma100k/: best_guess_0_99999_power_spectrum_normalised  best_guess_0_99999_thermo_normalised  gamma+_0_99999_power_spectrum_normalised  gamma+_0_99999_thermo_normalised  gamma+_h0+_0_99999_power_spectrum_normalised  gamma+_h0+_0_99999_thermo_normalised  gamma+_mnu++_0_99999_power_spectrum_normalised  gamma+_mnu++_0_99999_thermo_normalised  gamma+_ns+_0_99999_power_spectrum_normalised  gamma+_ns+_0_99999_thermo_normalised  gamma+_omegam+_0_99999_power_spectrum_normalised  gamma+_omegam+_0_99999_thermo_normalised  gamma+_sig8+_0_99999_power_spectrum_normalised  gamma+_sig8+_0_99999_thermo_normalised  gamma+_t0+_0_99999_power_spectrum_normalised  gamma+_t0+_0_99999_thermo_normalised  gamma+_tauA+_0_99999_power_spectrum_normalised  gamma+_tauA+_0_99999_thermo_normalised  gamma+_tauS+_0_99999_power_spectrum_normalised  gamma+_tauS+_0_99999_thermo_normalised  gamma-_0_99999_power_spectrum_normalised  gamma-_0_99999_thermo_normalised  h0+_0_99999_power_spectrum_normalised  h0+_0_99999_thermo_normalised  h0+_mnu++_0_99999_power_spectrum_normalised  h0+_mnu++_0_99999_thermo_normalised  h0-_0_99999_thermo_normalised  (+83 more)
test/: test.py  test_nersc.py
(+17 files in other folders)
