[build-system]
requires = ["setuptools >= 61.0","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name="lym1d"
dependencies = ["numpy", "scipy", "george"]
readme = "README.md"

classifiers=[
        'Development Status :: 1 - Planning',
        'Intended Audience :: Science/Research',
        'Operating System :: POSIX :: Linux',
        'Programming Language :: Python :: 3.8']

description='Lyman-Alpha 1D power spectrum analysis'
authors=[{name = 'Nils Schöneberg', email='nils.science@gmail.com'}]
dynamic = ["version"]
#version='0.1.0'

[project.urls]
Repostiory='https://github.com/schoeneberg/lym1d'

[tool.setuptools-git-versioning]
enabled = true
